<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?attr/colorSurface">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <EditText
            android:id="@+id/loginTextEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_text_input"
            android:hint="@string/login_hint_email"
            android:inputType="textEmailAddress"
            android:maxLength="254"
            android:paddingStart="@dimen/dp_16"
            android:paddingTop="@dimen/dp_8"
            android:paddingEnd="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_8"
            android:textColor="?android:attr/textColorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/loginTextPassword"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/registerTitle" />

        <EditText
            android:id="@+id/loginTextPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_text_input"
            android:ems="10"
            android:hint="@string/login_hint_password"
            android:inputType="textPassword"
            android:maxLength="254"
            android:paddingStart="@dimen/dp_16"
            android:paddingTop="@dimen/dp_8"
            android:paddingEnd="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_8"
            android:textColor="?android:attr/textColorPrimary"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/loginTextEmail" />

        <TextView
            android:id="@+id/registerTitle"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/login_title_login"
            android:textColor="@color/color_primary"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/loginTextEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButtonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:minWidth="128dp"
            android:text="@string/login_button_text_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/viewSpace"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/loginTextPassword" />

        <View
            android:id="@+id/viewSpace"
            android:layout_width="@dimen/dp_16"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/loginButtonRegister"
            app:layout_constraintEnd_toStartOf="@id/loginButtonRegister"
            app:layout_constraintHorizontal_bias="0.437"
            app:layout_constraintStart_toEndOf="@id/loginButtonLogin"
            app:layout_constraintTop_toTopOf="@+id/loginButtonLogin"
            app:layout_constraintVertical_bias="0.8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButtonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:minWidth="128dp"
            android:text="@string/login_button_text_register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/viewSpace"
            app:layout_constraintTop_toBottomOf="@+id/loginTextPassword" />

        <ProgressBar
            android:id="@+id/loginProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/AppProgressBar"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
